--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body class="bg-yellow-500 text-gray-800">
   <main class="max-w-xl mx-auto p-3 space-y-3">
-    <section class="bg-red-600 rounded-xl shadow-md p-2 text-center">
+    <section class="bg-black rounded-xl shadow-md p-2 text-center">
        <button onclick="fetchData()" class="text-white text-lg font-bold w-full">🔄 بروزرسانی اطلاعات</button>
     </section>
     <section class="bg-white rounded-xl shadow-md p-3 text-center">
