--- a/index.html
+++ b/index.html
@@ -181,13 +181,11 @@
                 const symbols = await ayarRes.json();
                 const ayar = symbols.find(i => i.l18 === "عیار");
                 const ayarpr = ((ayar.pc - avgayarPrice) / avgayarPrice) * 100;
-                const ayarmoney = (ayar.pc - avgayarPrice) * fundUnits ;
-                
+
                 if (ayar && ayar.pc) {
                     const result = fundUnits * (ayar.pc / 10);
                     const combined = totalGoldValue + result + totalIrt;
                     const color = ayar.pcp > 0 ? 'green' : ayar.pcp < 0 ? 'red' : 'black';
-                    
 
                     animateElement("fund-price-box", `<span style="color:${color}">صندوق عیار: ${toPersianNumber(ayar.pc.toLocaleString())} (${toPersianNumber(Math.abs(ayar.pcc))} | ${toPersianNumber(Math.abs(ayar.pcp.toFixed(2)))}%)</span>`);
                     animateElement("gold-amount", toPersianNumber(Math.floor(combined).toLocaleString()));
@@ -197,24 +195,17 @@
                           <div class="text-2xl font-extrabold drop-shadow text-white mt-2">${toPersianNumber(Math.floor(result).toLocaleString())}</div>
                     `);
 
-                    const ayarprText = toPersianNumber(Math.abs(ayarpr).toFixed(2));
-
-                    const ayarprText = toPersianNumber(Math.abs(ayarpr).toFixed(2));
-
-                    const colorClass = ayarmoney < 0
-                         ? "text-red-500"
-                         : ayarmoney > 0
-                         ? "text-green-500"
-                         : "text-black";
+                    const ayarprText = ayarpr < 0
+                        ? `${toPersianNumber(Math.abs(ayarpr).toFixed(2))}-`
+                        : toPersianNumber(ayarpr.toFixed(2));
 
                     document.querySelector("#profit-box").insertAdjacentHTML(
-                    "beforeend",
-                       `<div class="text-sm font-bold ${colorClass} mt-1 persian-numbers">
-                               ${toPersianNumber(Math.floor(ayarmoney).toLocaleString())} 
-                               (${ayarprText}٪)
-                        </div>`
+                       "beforeend",
+                       `<div class="text-sm font-bold text-yellow-300 mt-1 persian-numbers">
+                            قیمت سر به سر: ${toPersianNumber(Math.floor(avgayarPrice).toLocaleString())} 
+                            (${ayarprText}٪)
+                       </div>`
                     );
-
 
              } else {
                    animateElement("profit-box", "صندوق عیار یافت نشد");
