--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
                 const symbols = await ayarRes.json();
                 const ayar = symbols.find(i => i.l18 === "عیار");
                 const ayarpr = ((ayar.pc - avgayarPrice) / avgayarPrice) * 100;
-
+                const ayarmoney = ((ayar.pc - avgayarPrice) * fundUnits) / 10;
+            
                 if (ayar && ayar.pc) {
                     const result = fundUnits * (ayar.pc / 10);
                     const combined = totalGoldValue + result + totalIrt;
@@ -202,7 +203,7 @@
                     document.querySelector("#profit-box").insertAdjacentHTML(
                        "beforeend",
                        `<div class="text-sm font-bold text-yellow-300 mt-1 persian-numbers">
-                            قیمت سر به سر: ${toPersianNumber(Math.floor(avgayarPrice).toLocaleString())} 
+                            ${toPersianNumber(Math.floor(ayarmoney).toLocaleString())} 
                             (${ayarprText}٪)
                        </div>`
                     );
