--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     const ayarprText = `${toPersianNumber(Math.abs(ayarpr).toFixed(2))}٪`;
 
                     // رنگ سطر بر اساس مثبت یا منفی بودن
-                    const rowColorClass = isProfitPositive ? "bg-green-700 text-white" : "bg-red-700 text-white";
+                    const rowColorClass = isProfitPositive ? "text-green-700" : "text-red-700";
 
                     document.querySelector("#profit-box").insertAdjacentHTML(
                       "beforeend",
