--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body class="bg-yellow-500 text-gray-800">
   <main class="max-w-xl mx-auto p-3 space-y-3">
-    <section class="bg-black rounded-xl shadow-md p-2 text-center">
+    <section class="bg-purple-800 rounded-xl shadow-md p-2 text-center">
        <button onclick="fetchData()" class="text-white text-lg font-bold w-full">🔄 بروزرسانی اطلاعات</button>
     </section>
     <section class="bg-white rounded-xl shadow-md p-3 text-center">
@@ -41,20 +41,20 @@
 
     <section class="bg-white rounded-xl shadow-md p-3 text-center persian-numbers">
       <h3 id="portfolio-title" class="text-xl font-extrabold text-yellow-300 mb-2 drop-shadow">دارایی طلای آبشده</h3>
-      <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">...</p>
+      <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-blue-800 drop-shadow">...</p>
     </section>
 
     <section id="profit-box" class="bg-white rounded-xl shadow-md p-3 text-center text-yellow-400 persian-numbers">
       در حال محاسبه سود/زیان...
     </section>
 
-    <section id="crypto-box" class="bg-white rounded-xl shadow-md p-3 text-center text-white persian-numbers">
+    <section id="crypto-box" class="bg-white rounded-xl shadow-md p-3 text-center text-black persian-numbers">
       در حال دریافت اطلاعات رمزارزها...
     </section>
 
-    <section class="bg-white rounded-xl shadow-md p-3 text-center">
-      <h3 class="text-xl font-extrabold text-black mb-2 drop-shadow">دارایی کل</h3>
-      <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-blue-800 drop-shadow">...</p>
+    <section class="bg-purple-800 rounded-xl shadow-md p-3 text-center">
+      <h3 class="text-xl font-extrabold text-white mb-2 drop-shadow">دارایی کل</h3>
+      <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-yellow-800 drop-shadow">...</p>
     </section>
 
     <p id="last-update" class="text-sm text-black text-center mt-4 persian-numbers">در حال دریافت زمان...</p>
