--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
     <section id="crypto-box" class="bg-white rounded-xl shadow-md p-3 text-center text-black persian-numbers">
       در حال دریافت اطلاعات رمزارزها...
     </section>
-    <h3 class="text-xl font-extrabold text-center text-white mb-2 drop-shadow">دارایی کل</h3>
     <section class="bg-purple-800 rounded-xl shadow-md p-3 text-center">
       <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">...</p>
     </section>
@@ -110,7 +109,7 @@
 
 
         animateElement("crypto-box", `
-          <div class="text-purple-800 text-xl font-bold mb-2">دارایی رمزارزها</div>
+          <div class="text-purple-800 text-xl font-bold mb-2">رمزارزها</div>
           <div class="space-y-1">
             <div>BTC: ${toPersianNumber(bitcoin.usd.toLocaleString())} = $${toPersianNumber((btcAmount * bitcoin.usd).toFixed(2))} = ${toPersianNumber(Math.floor(btcpr).toLocaleString())}</div>
             <div>ETH: ${toPersianNumber(ethereum.usd.toLocaleString())} = $${toPersianNumber((ethAmount * ethereum.usd).toFixed(2))} = ${toPersianNumber(Math.floor(ethpr).toLocaleString())}</div>
@@ -147,7 +146,7 @@
           const totalGoldValue = (goldPrice - 30000) * myGoldGrams;
           const Goldpr = ((gold18.price - avgGoldPrice) / avgGoldPrice) * 100;
 
-          document.getElementById("portfolio-title").innerText = `دارایی طلای آبشده (${toPersianNumber(myGoldGrams.toLocaleString())} گرم)`;
+          document.getElementById("portfolio-title").innerText = `طلای آبشده (${toPersianNumber(myGoldGrams.toLocaleString())} گرم)`;
           animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
 
           const goldprText = Goldpr < 0
@@ -191,7 +190,7 @@
                     animateElement("gold-amount", toPersianNumber(Math.floor(combined).toLocaleString()));
 
                     animateElement("profit-box", `
-                          <div class="text-xl font-extrabold drop-shadow text-purple-800">دارایی صندوق عیار (${toPersianNumber(fundUnits.toLocaleString())} واحد)</div>
+                          <div class="text-xl font-extrabold drop-shadow text-purple-800">صندوق عیار (${toPersianNumber(fundUnits.toLocaleString())} واحد)</div>
                           <div class="text-2xl font-extrabold drop-shadow text-blue-800 mt-2">${toPersianNumber(Math.floor(result).toLocaleString())}</div>
                     `);
 
