--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
          // حالا سطر جدید را اضافه کنید
          document.querySelector("#portfolio-value").insertAdjacentHTML(
            "afterend",
-           `<div class="text-sm font-bold text-purple-800 mt-1 persian-numbers">
+           `<div class="text-sm font-bold text-black mt-1 persian-numbers">
                میانگین قیمت خرید: ${toPersianNumber(Math.floor(avgGoldPrice).toLocaleString())} 
                (${goldprText}٪)
            </div>`
@@ -196,7 +196,7 @@
 
                     const isProfitPositive = ayarmoney >= 0;
                     const formattedAyarMoney = toPersianNumber(Math.floor(Math.abs(ayarmoney)).toLocaleString());
-                    const ayarprText = `${toPersianNumber(Math.abs(ayarpr).toFixed(2))}٪`;
+                    const ayarprText = `%${toPersianNumber(Math.abs(ayarpr).toFixed(2))}`;
                     const rowColorClass = isProfitPositive ? "text-green-700" : "text-red-700";
 
                     document.querySelector("#profit-box").insertAdjacentHTML(
