--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
            "afterend",
            `<div class="text-sm font-bold text-black mt-1 persian-numbers">
                میانگین قیمت خرید: ${toPersianNumber(Math.floor(avgGoldPrice).toLocaleString())} 
-               (${goldprText}٪)
+               (${goldprText}%)
            </div>`
          );
           
