--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body class="bg-yellow-500 text-gray-800">
   <main class="max-w-xl mx-auto p-3 space-y-3">
     <section class="bg-purple-800 rounded-xl shadow-md p-2 text-center">
-       <button onclick="fetchData()" class="text-white text-lg font-bold w-full">🔄 بروزرسانی اطلاعات</button>
+       <button onclick="fetchData()" class="text-white text-lg font-bold w-full">🔄 بروزرسانی ارزش دارایی ها</button>
     </section>
     <section class="bg-white rounded-xl shadow-md p-3 text-center">
       <div class="text-base font-bold space-y-1 persian-numbers">
