--- a/index.html
+++ b/index.html
@@ -106,15 +106,18 @@
         const btcpr = (btcAmount * bitcoin.usd) * usdtPrice;
         const ethpr = (ethAmount * ethereum.usd) * usdtPrice;
         const filpr = (filAmount * filecoin.usd) * usdtPrice;
+        const btcm = btcAmount * bitcoin.usd;
+        const ethm = ethAmount * ethereum.usd;
+        const film = filAmount * filecoin.usd;
 
         const getColor = (change) => change > 0 ? 'green' : change < 0 ? 'red' : 'black';
 
         animateElement("crypto-box", `
           <div class="text-purple-800 text-xl font-bold drop-shadow mb-2">رمزارزها</div>
           <div class="space-y-1">
-             <div style="color:${getColor(bitcoin.usd_24h_change)}">BTC: ${toPersianNumber(bitcoin.usd.toLocaleString())} = $${toPersianNumber((btcAmount * bitcoin.usd).toFixed(2))} = ${toPersianNumber(Math.floor(btcpr).toLocaleString())}</div>
-             <div style="color:${getColor(ethereum.usd_24h_change)}">ETH: ${toPersianNumber(ethereum.usd.toLocaleString())} = $${toPersianNumber((ethAmount * ethereum.usd).toFixed(2))} = ${toPersianNumber(Math.floor(ethpr).toLocaleString())}</div>
-             <div style="color:${getColor(filecoin.usd_24h_change)}">FIL: ${toPersianNumber(filecoin.usd.toLocaleString())} = $${toPersianNumber((filAmount * filecoin.usd).toFixed(2))} = ${toPersianNumber(Math.floor(filpr).toLocaleString())}</div>
+             <div style="color:${getColor(bitcoin.usd_24h_change)}">BTC: ${toPersianNumber(bitcoin.usd.toLocaleString())} = $${toPersianNumber(btcm.toFixed(2)).toLocaleString()} = ${toPersianNumber(Math.floor(btcpr).toLocaleString())}</div>
+             <div style="color:${getColor(ethereum.usd_24h_change)}">ETH: ${toPersianNumber(ethereum.usd.toLocaleString())} = $${toPersianNumber(ethm.toFixed(2)).toLocaleString()} = ${toPersianNumber(Math.floor(ethpr).toLocaleString())}</div>
+             <div style="color:${getColor(filecoin.usd_24h_change)}">FIL: ${toPersianNumber(filecoin.usd.toLocaleString())} = $${toPersianNumber(film.toFixed(2)).toLocaleString()} = ${toPersianNumber(Math.floor(filpr).toLocaleString())}</div>
              <p class="text-2xl font-extrabold persian-numbers text-black drop-shadow mt-2">${toPersianNumber(totalIrt.toLocaleString())}</p>
          </div>
        `);
