--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
         animateElement("crypto-box", `
           <div class="text-purple-800 text-xl font-bold drop-shadow mb-2">رمزارزها</div>
           <div class="space-y-1">
-             <div style="color:${getColor(bitcoin.usd_24h_change)}">BTC: ${toPersianNumber(bitcoin.usd.toLocaleString())} = $${toPersianNumber(btcm.toFixed(2).toLocaleString())} = ${toPersianNumber(Math.floor(btcpr).toLocaleString())}</div>
-             <div style="color:${getColor(ethereum.usd_24h_change)}">ETH: ${toPersianNumber(ethereum.usd.toLocaleString())} = $${toPersianNumber(ethm.toFixed(2).toLocaleString())} = ${toPersianNumber(Math.floor(ethpr).toLocaleString())}</div>
-             <div style="color:${getColor(filecoin.usd_24h_change)}">FIL: ${toPersianNumber(filecoin.usd.toLocaleString())} = $${toPersianNumber(film.toFixed(2).toLocaleString())} = ${toPersianNumber(Math.floor(filpr).toLocaleString())}</div>
+             <div style="color:${getColor(bitcoin.usd_24h_change)}">BTC: ${toPersianNumber(bitcoin.usd.toLocaleString())} = ${toPersianNumber(btcm.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 }))} = ${toPersianNumber(Math.floor(btcpr).toLocaleString())}</div>
+             <div style="color:${getColor(ethereum.usd_24h_change)}">ETH: ${toPersianNumber(ethereum.usd.toLocaleString())} = ${toPersianNumber(ethm.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 }))} = ${toPersianNumber(Math.floor(ethpr).toLocaleString())}</div>
+             <div style="color:${getColor(filecoin.usd_24h_change)}">FIL: ${toPersianNumber(filecoin.usd.toLocaleString())} = ${toPersianNumber(film.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 }))} = ${toPersianNumber(Math.floor(filpr).toLocaleString())}</div>
              <p class="text-2xl font-extrabold persian-numbers text-black drop-shadow mt-2">${toPersianNumber(totalIrt.toLocaleString())}</p>
          </div>
        `);
